TFP-6405: WIP Refaktorering